Changed resume download button text from Download.pdf to Resume

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
                 <p><i class="fa fa-twitter fa-fw"></i> <a href="//twitter.com/{{ site.author.twitter }}" target="_blank">  @{{ site.author.twitter }} </a></p>
             </div>
             <div class="col-sm-4 visible-md-block visible-lg-block">
-                <a href="../assets/res/Umang_Desai_Resume.pdf" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf </a>
+                <a href="../assets/res/Umang_Desai_Resume.pdf" class="btn btn-dark"><i class="icon-file icon-white"></i> Resume </a>
             </div>
         </div>
     </div>
